-
Bug
-
Resolution: Done
-
P3: Somewhat important
-
5.9.9, 5.12.7, 5.14.1
-
-
1d48572b4ea765cb8d81bf227eabaf907a91e7de (qt/qtbase/dev) cf52d725156811754cd4e094b0984864795d1d58 (qt/qtbase/6.1) c12e241373fce9925d2c062448eceb92188ad0e8 (qt/qtbase/6.2)
Setting a stylesheet "QAbstractItemView::indicator{}" changes the selected item text color to white which otherwise would be dark with windowsvista style.
Steps to reproduce the issue:
- Build & run the attached project
- Select an item from the upper view and select an item from the lower view See the difference in text color for the selected item
- relates to
-
PYSIDE-1828 indicator stylesheet doesn't work
-
- Closed
-
| For Gerrit Dashboard: QTBUG-83619 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V |
| 359796,2 | Use base style when drawing item view item with only indicator styled | dev | qt/qtbase | Status: MERGED | +2 | 0 |
| 359844,2 | Use base style when drawing item view item with only indicator styled | 6.2 | qt/qtbase | Status: MERGED | +2 | 0 |
| 359845,2 | Use base style when drawing item view item with only indicator styled | 6.1 | qt/qtbase | Status: MERGED | +2 | 0 |