Use base style when drawing item view item with only indicator styled

The base style should still draw the item and the selection highlighting.

Fixes: QTBUG-83619
Change-Id: I1cd8c4fce48cb5543337415918fc99ffb5e19e00
Reviewed-by: Richard Moe Gustavsen <richard.gustavsen@qt.io>
(cherry picked from commit 1d48572b4ea765cb8d81bf227eabaf907a91e7de)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>